// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exports_default.js 1`] = `
// @flow

const x = "foo";

export default x;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

const x = "foo";

export default x;

`;

exports[`exports_named.js 1`] = `
// @flow

export const foo = "foo";
export const bar = "bar";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

export const foo = "foo";
export const bar = "bar";

`;
